--- a/octopus-survey-tables.html
+++ b/octopus-survey-tables.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2025-07-12" />
 
-<title>Octopus survey results</title>
+<title>Octopuse survey results</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -446,64 +446,13 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Octopus survey results</h1>
+<h1 class="title toc-ignore">Octopuse survey results</h1>
 <h4 class="author">Andrew Mertens</h4>
 <h4 class="date">2025-07-12</h4>
 
 </div>
 
 
-<pre class="r"><code>knitr::opts_chunk$set(echo = FALSE)
-
-rm(list=ls())
-library(tidyverse)</code></pre>
-<pre><code>## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
-## ✔ dplyr     1.1.4     ✔ readr     2.1.5
-## ✔ forcats   1.0.0     ✔ stringr   1.5.1
-## ✔ ggplot2   3.5.1     ✔ tibble    3.2.1
-## ✔ lubridate 1.9.3     ✔ tidyr     1.3.1
-## ✔ purrr     1.0.2     
-## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-## ✖ dplyr::filter() masks stats::filter()
-## ✖ dplyr::lag()    masks stats::lag()
-## ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors</code></pre>
-<pre class="r"><code>library(here)</code></pre>
-<pre><code>## here() starts at C:/Users/andre/OneDrive/Documents/cephalopod_survey</code></pre>
-<pre class="r"><code>library(table1)</code></pre>
-<pre><code>## 
-## Attaching package: &#39;table1&#39;
-## 
-## The following objects are masked from &#39;package:base&#39;:
-## 
-##     units, units&lt;-</code></pre>
-<pre class="r"><code>library(DT)
-library(flextable)</code></pre>
-<pre><code>## 
-## Attaching package: &#39;flextable&#39;
-## 
-## The following object is masked from &#39;package:purrr&#39;:
-## 
-##     compose</code></pre>
-<pre class="r"><code>d &lt;- readRDS(here(&quot;data&quot;, &quot;cleaned_octopus_farming_data.RDS&quot;))
-colnames(d)</code></pre>
-<pre><code>##  [1] &quot;RespondentID&quot;               &quot;COUNTRY&quot;                   
-##  [3] &quot;URBANRURAL&quot;                 &quot;Gender&quot;                    
-##  [5] &quot;Age&quot;                        &quot;dAGE&quot;                      
-##  [7] &quot;Q1_awareness&quot;               &quot;Q2_support&quot;                
-##  [9] &quot;Q4_welfare_knowledge&quot;       &quot;Q4_environmental_knowledge&quot;
-## [11] &quot;Q4_economic_knowledge&quot;      &quot;Q4_sentience_knowledge&quot;    
-## [13] &quot;Q4_public_health_knowledge&quot; &quot;Q5_consumption_frequency&quot;  
-## [15] &quot;Q6_impact_on_consumption&quot;   &quot;message&quot;                   
-## [17] &quot;Q7_ban_farming_support&quot;     &quot;Q7_ban_sale_support&quot;       
-## [19] &quot;Q7_ban_subsidies_support&quot;   &quot;Q9_vote_candidate_support&quot; 
-## [21] &quot;income_cat&quot;</code></pre>
-<pre class="r"><code>dput(colnames(d))</code></pre>
-<pre><code>## c(&quot;RespondentID&quot;, &quot;COUNTRY&quot;, &quot;URBANRURAL&quot;, &quot;Gender&quot;, &quot;Age&quot;, &quot;dAGE&quot;, 
-## &quot;Q1_awareness&quot;, &quot;Q2_support&quot;, &quot;Q4_welfare_knowledge&quot;, &quot;Q4_environmental_knowledge&quot;, 
-## &quot;Q4_economic_knowledge&quot;, &quot;Q4_sentience_knowledge&quot;, &quot;Q4_public_health_knowledge&quot;, 
-## &quot;Q5_consumption_frequency&quot;, &quot;Q6_impact_on_consumption&quot;, &quot;message&quot;, 
-## &quot;Q7_ban_farming_support&quot;, &quot;Q7_ban_sale_support&quot;, &quot;Q7_ban_subsidies_support&quot;, 
-## &quot;Q9_vote_candidate_support&quot;, &quot;income_cat&quot;)</code></pre>
 <div id="explore-demographics-by-country" class="section level2">
 <h2>Explore demographics by country</h2>
 <div class="Rtable1"><table class="Rtable1">
@@ -2312,482 +2261,24 @@ colnames(d)</code></pre>
 </div>
 <div id="explore-support-by-country" class="section level2">
 <h2>Explore support by country</h2>
-<pre><code>## Support farming octopuses(pre-message):</code></pre>
-<table>
-<thead>
-<tr class="header">
-<th align="left">Var1</th>
-<th align="right">Freq</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Neutral/Don’t know</td>
-<td align="right">42.1</td>
-</tr>
-<tr class="even">
-<td align="left">Oppose</td>
-<td align="right">31.5</td>
-</tr>
-<tr class="odd">
-<td align="left">Support</td>
-<td align="right">26.4</td>
-</tr>
-</tbody>
-</table>
-<table>
-<thead>
-<tr class="header">
-<th align="left"></th>
-<th align="right">Neutral/Don’t know</th>
-<th align="right">Oppose</th>
-<th align="right">Support</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Netherlands</td>
-<td align="right">42.1</td>
-<td align="right">41.2</td>
-<td align="right">16.7</td>
-</tr>
-<tr class="even">
-<td align="left">Belgium</td>
-<td align="right">48.5</td>
-<td align="right">34.1</td>
-<td align="right">17.4</td>
-</tr>
-<tr class="odd">
-<td align="left">Denmark</td>
-<td align="right">48.6</td>
-<td align="right">32.3</td>
-<td align="right">19.1</td>
-</tr>
-<tr class="even">
-<td align="left">France</td>
-<td align="right">44.5</td>
-<td align="right">33.4</td>
-<td align="right">22.1</td>
-</tr>
-<tr class="odd">
-<td align="left">Poland</td>
-<td align="right">50.5</td>
-<td align="right">27.3</td>
-<td align="right">22.1</td>
-</tr>
-<tr class="even">
-<td align="left">UK</td>
-<td align="right">42.1</td>
-<td align="right">34.1</td>
-<td align="right">23.8</td>
-</tr>
-<tr class="odd">
-<td align="left">Sweden</td>
-<td align="right">46.9</td>
-<td align="right">28.5</td>
-<td align="right">24.6</td>
-</tr>
-<tr class="even">
-<td align="left">Germany</td>
-<td align="right">41.2</td>
-<td align="right">33.2</td>
-<td align="right">25.6</td>
-</tr>
-<tr class="odd">
-<td align="left">Czechia</td>
-<td align="right">44.0</td>
-<td align="right">28.4</td>
-<td align="right">27.5</td>
-</tr>
-<tr class="even">
-<td align="left">Italy</td>
-<td align="right">33.2</td>
-<td align="right">36.9</td>
-<td align="right">29.9</td>
-</tr>
-<tr class="odd">
-<td align="left">Slovenia</td>
-<td align="right">36.5</td>
-<td align="right">33.1</td>
-<td align="right">30.3</td>
-</tr>
-<tr class="even">
-<td align="left">Greece</td>
-<td align="right">36.6</td>
-<td align="right">30.1</td>
-<td align="right">33.3</td>
-</tr>
-<tr class="odd">
-<td align="left">Portugal</td>
-<td align="right">39.5</td>
-<td align="right">26.4</td>
-<td align="right">34.2</td>
-</tr>
-<tr class="even">
-<td align="left">Spain</td>
-<td align="right">35.4</td>
-<td align="right">21.9</td>
-<td align="right">42.7</td>
-</tr>
-</tbody>
-</table>
-<pre><code>## Support for ban on farming octopuses (post-message):</code></pre>
-<table>
-<thead>
-<tr class="header">
-<th align="left">Var1</th>
-<th align="right">Freq</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Neutral/Don’t know</td>
-<td align="right">31.7</td>
-</tr>
-<tr class="even">
-<td align="left">Oppose</td>
-<td align="right">17.4</td>
-</tr>
-<tr class="odd">
-<td align="left">Support</td>
-<td align="right">50.8</td>
-</tr>
-</tbody>
-</table>
-<table>
-<thead>
-<tr class="header">
-<th align="left"></th>
-<th align="right">Neutral/Don’t know</th>
-<th align="right">Oppose</th>
-<th align="right">Support</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Spain</td>
-<td align="right">33.3</td>
-<td align="right">27.8</td>
-<td align="right">38.9</td>
-</tr>
-<tr class="even">
-<td align="left">Portugal</td>
-<td align="right">34.0</td>
-<td align="right">22.0</td>
-<td align="right">44.0</td>
-</tr>
-<tr class="odd">
-<td align="left">Czechia</td>
-<td align="right">33.3</td>
-<td align="right">21.3</td>
-<td align="right">45.4</td>
-</tr>
-<tr class="even">
-<td align="left">Greece</td>
-<td align="right">30.4</td>
-<td align="right">24.1</td>
-<td align="right">45.5</td>
-</tr>
-<tr class="odd">
-<td align="left">Denmark</td>
-<td align="right">36.4</td>
-<td align="right">16.7</td>
-<td align="right">47.0</td>
-</tr>
-<tr class="even">
-<td align="left">Poland</td>
-<td align="right">33.9</td>
-<td align="right">18.4</td>
-<td align="right">47.7</td>
-</tr>
-<tr class="odd">
-<td align="left">Slovenia</td>
-<td align="right">31.4</td>
-<td align="right">17.6</td>
-<td align="right">51.0</td>
-</tr>
-<tr class="even">
-<td align="left">Sweden</td>
-<td align="right">34.5</td>
-<td align="right">13.9</td>
-<td align="right">51.6</td>
-</tr>
-<tr class="odd">
-<td align="left">France</td>
-<td align="right">34.5</td>
-<td align="right">13.4</td>
-<td align="right">52.1</td>
-</tr>
-<tr class="even">
-<td align="left">Belgium</td>
-<td align="right">36.0</td>
-<td align="right">11.8</td>
-<td align="right">52.2</td>
-</tr>
-<tr class="odd">
-<td align="left">Germany</td>
-<td align="right">31.5</td>
-<td align="right">16.0</td>
-<td align="right">52.5</td>
-</tr>
-<tr class="even">
-<td align="left">UK</td>
-<td align="right">26.0</td>
-<td align="right">13.1</td>
-<td align="right">60.9</td>
-</tr>
-<tr class="odd">
-<td align="left">Netherlands</td>
-<td align="right">26.5</td>
-<td align="right">12.4</td>
-<td align="right">61.1</td>
-</tr>
-<tr class="even">
-<td align="left">Italy</td>
-<td align="right">22.7</td>
-<td align="right">15.4</td>
-<td align="right">61.9</td>
-</tr>
-</tbody>
-</table>
-<pre><code>## Support for ban on sale of octopuses (post-message):</code></pre>
-<table>
-<thead>
-<tr class="header">
-<th align="left">Var1</th>
-<th align="right">Freq</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Neutral/Don’t know</td>
-<td align="right">31.4</td>
-</tr>
-<tr class="even">
-<td align="left">Oppose</td>
-<td align="right">20.4</td>
-</tr>
-<tr class="odd">
-<td align="left">Support</td>
-<td align="right">48.2</td>
-</tr>
-</tbody>
-</table>
-<table>
-<thead>
-<tr class="header">
-<th align="left"></th>
-<th align="right">Neutral/Don’t know</th>
-<th align="right">Oppose</th>
-<th align="right">Support</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Spain</td>
-<td align="right">31.5</td>
-<td align="right">30.3</td>
-<td align="right">38.2</td>
-</tr>
-<tr class="even">
-<td align="left">Czechia</td>
-<td align="right">35.4</td>
-<td align="right">25.0</td>
-<td align="right">39.6</td>
-</tr>
-<tr class="odd">
-<td align="left">Portugal</td>
-<td align="right">34.2</td>
-<td align="right">24.0</td>
-<td align="right">41.8</td>
-</tr>
-<tr class="even">
-<td align="left">Denmark</td>
-<td align="right">35.8</td>
-<td align="right">22.1</td>
-<td align="right">42.1</td>
-</tr>
-<tr class="odd">
-<td align="left">Greece</td>
-<td align="right">31.3</td>
-<td align="right">24.0</td>
-<td align="right">44.7</td>
-</tr>
-<tr class="even">
-<td align="left">Poland</td>
-<td align="right">33.8</td>
-<td align="right">21.0</td>
-<td align="right">45.2</td>
-</tr>
-<tr class="odd">
-<td align="left">Slovenia</td>
-<td align="right">30.0</td>
-<td align="right">22.4</td>
-<td align="right">47.6</td>
-</tr>
-<tr class="even">
-<td align="left">Sweden</td>
-<td align="right">33.2</td>
-<td align="right">16.7</td>
-<td align="right">50.1</td>
-</tr>
-<tr class="odd">
-<td align="left">France</td>
-<td align="right">31.8</td>
-<td align="right">17.8</td>
-<td align="right">50.3</td>
-</tr>
-<tr class="even">
-<td align="left">Belgium</td>
-<td align="right">33.6</td>
-<td align="right">15.9</td>
-<td align="right">50.5</td>
-</tr>
-<tr class="odd">
-<td align="left">Germany</td>
-<td align="right">30.9</td>
-<td align="right">18.6</td>
-<td align="right">50.6</td>
-</tr>
-<tr class="even">
-<td align="left">Italy</td>
-<td align="right">25.3</td>
-<td align="right">17.6</td>
-<td align="right">57.1</td>
-</tr>
-<tr class="odd">
-<td align="left">UK</td>
-<td align="right">27.2</td>
-<td align="right">15.1</td>
-<td align="right">57.7</td>
-</tr>
-<tr class="even">
-<td align="left">Netherlands</td>
-<td align="right">25.1</td>
-<td align="right">15.4</td>
-<td align="right">59.5</td>
-</tr>
-</tbody>
-</table>
-<pre><code>## Support for ban on subsidies (post-message):</code></pre>
-<table>
-<thead>
-<tr class="header">
-<th align="left">Var1</th>
-<th align="right">Freq</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Neutral/Don’t know</td>
-<td align="right">31.4</td>
-</tr>
-<tr class="even">
-<td align="left">Oppose</td>
-<td align="right">20.4</td>
-</tr>
-<tr class="odd">
-<td align="left">Support</td>
-<td align="right">48.2</td>
-</tr>
-</tbody>
-</table>
-<table>
-<thead>
-<tr class="header">
-<th align="left"></th>
-<th align="right">Neutral/Don’t know</th>
-<th align="right">Oppose</th>
-<th align="right">Support</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Spain</td>
-<td align="right">31.5</td>
-<td align="right">30.3</td>
-<td align="right">38.2</td>
-</tr>
-<tr class="even">
-<td align="left">Czechia</td>
-<td align="right">35.4</td>
-<td align="right">25.0</td>
-<td align="right">39.6</td>
-</tr>
-<tr class="odd">
-<td align="left">Portugal</td>
-<td align="right">34.2</td>
-<td align="right">24.0</td>
-<td align="right">41.8</td>
-</tr>
-<tr class="even">
-<td align="left">Denmark</td>
-<td align="right">35.8</td>
-<td align="right">22.1</td>
-<td align="right">42.1</td>
-</tr>
-<tr class="odd">
-<td align="left">Greece</td>
-<td align="right">31.3</td>
-<td align="right">24.0</td>
-<td align="right">44.7</td>
-</tr>
-<tr class="even">
-<td align="left">Poland</td>
-<td align="right">33.8</td>
-<td align="right">21.0</td>
-<td align="right">45.2</td>
-</tr>
-<tr class="odd">
-<td align="left">Slovenia</td>
-<td align="right">30.0</td>
-<td align="right">22.4</td>
-<td align="right">47.6</td>
-</tr>
-<tr class="even">
-<td align="left">Sweden</td>
-<td align="right">33.2</td>
-<td align="right">16.7</td>
-<td align="right">50.1</td>
-</tr>
-<tr class="odd">
-<td align="left">France</td>
-<td align="right">31.8</td>
-<td align="right">17.8</td>
-<td align="right">50.3</td>
-</tr>
-<tr class="even">
-<td align="left">Belgium</td>
-<td align="right">33.6</td>
-<td align="right">15.9</td>
-<td align="right">50.5</td>
-</tr>
-<tr class="odd">
-<td align="left">Germany</td>
-<td align="right">30.9</td>
-<td align="right">18.6</td>
-<td align="right">50.6</td>
-</tr>
-<tr class="even">
-<td align="left">Italy</td>
-<td align="right">25.3</td>
-<td align="right">17.6</td>
-<td align="right">57.1</td>
-</tr>
-<tr class="odd">
-<td align="left">UK</td>
-<td align="right">27.2</td>
-<td align="right">15.1</td>
-<td align="right">57.7</td>
-</tr>
-<tr class="even">
-<td align="left">Netherlands</td>
-<td align="right">25.1</td>
-<td align="right">15.4</td>
-<td align="right">59.5</td>
-</tr>
-</tbody>
-</table>
+<pre><code>## 
+## Neutral  Oppose Support 
+##    37.0    34.3    28.7</code></pre>
+<pre><code>##             Neutral Oppose Support
+## Netherlands    36.5   45.1    18.3
+## Belgium        43.0   37.8    19.3
+## Denmark        43.8   35.3    20.9
+## Poland         46.0   29.8    24.2
+## France         38.6   37.0    24.4
+## UK             36.9   37.1    25.9
+## Germany        36.0   36.2    27.9
+## Sweden         39.2   32.6    28.2
+## Czechia        38.1   31.4    30.5
+## Slovenia       33.0   35.0    32.0
+## Italy          27.7   39.9    32.4
+## Greece         34.0   31.3    34.7
+## Portugal       35.7   28.0    36.3
+## Spain          30.5   23.6    45.9</code></pre>
 </div>
 <div id="explore-demographics-by-message" class="section level2">
 <h2>Explore demographics by message</h2>
